# opencv-examples

./: CMakeLists.txt  canny.cpp  image.cpp  main.cpp
